<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Introduction1Fragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/almost_done"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:fontFamily="@font/worksans_bold"
            android:layout_marginTop="40dp"/>

        <TextView
            android:layout_marginTop="40dp"
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/headline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/specify_trash_notification_time"/>

        <TextView
            android:layout_marginTop="40dp"
            android:id="@+id/text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/text"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp"
            android:text="@string/notify_me_before"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/minutes_layout"
            style="@style/BoxedTextInput"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            app:layout_constraintTop_toBottomOf="@id/text2"
            app:layout_constraintLeft_toLeftOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/minutes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:lines="1"
                android:text="@string/time_margin"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_marginTop="30dp"
            android:id="@+id/text3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/text2"
            app:layout_constraintLeft_toRightOf="@id/minutes_layout"
            android:layout_marginStart="20dp"
            android:text="@string/minutes"/>

        <CheckBox
            android:id="@+id/sms"
            app:layout_constraintTop_toBottomOf="@+id/minutes_layout"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_sms"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/register"
            app:layout_constraintTop_toBottomOf="@id/sms"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/save"
            android:textAllCaps="false"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>