<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Introduction1Fragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/setup_location_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/choosing_location">
        </androidx.appcompat.widget.Toolbar>

        <ProgressBar
            android:id="@+id/progress_bar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminateOnly="true"
            app:layout_constraintTop_toBottomOf="@id/top_toolbar_layout"/>

        <com.google.android.material.button.MaterialButton
            android:layout_gravity="center"
            android:id="@+id/current_location"
            app:layout_constraintTop_toBottomOf="@+id/progress_bar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:backgroundTint="@android:color/white"
            app:rippleColor="@color/colorAccentLight"
            android:textColor="@color/colorAccent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|start"
            android:text="@string/use_current_location"
            android:textAllCaps="false"
            app:icon="@drawable/ic_my_location_green_24dp"
            app:iconTint="@color/colorAccent"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/lightGrey"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"/>

        <ListView
            android:id="@+id/locations_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@android:color/transparent">
        </ListView>

    </LinearLayout>


    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fab"
        android:textAlignment="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/desc"
        android:text="@string/search"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="25dp"
        android:backgroundTint="@color/colorPrimary"
        android:textColor="@android:color/white"
        app:iconTint="@android:color/white"
        app:rippleColor="@color/whiteSemiTransparent"
        android:visibility="invisible"/>

    <ImageView
        android:contentDescription="@string/no_connection_logo"
        android:id="@+id/network_problem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/ic_cloud_off_black_24dp"/>
</FrameLayout>