<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Introduction1Fragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">

        <ImageView
            android:contentDescription="@string/locatisation_image"
            android:layout_marginTop="60dp"
            android:id="@+id/main_picture"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:src="@drawable/ic_undraw_directions"
            android:layout_width="320dp"
            android:layout_height="250dp"
            />

        <TextView
            android:id="@+id/headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/main_picture"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/last_step"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:fontFamily="@font/worksans_bold"
            android:layout_marginTop="35dp"/>

        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/headline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/choose_location"
            android:layout_marginTop="20dp"
            android:textAlignment="center"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/current_location"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/use_current_location"
            android:textAllCaps="false"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text"
            app:icon="@drawable/ic_my_location_white_24dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/location_manually"
            app:layout_constraintTop_toBottomOf="@+id/current_location"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="10dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:backgroundTint="@android:color/white"
            app:rippleColor="@color/colorAccentLight"
            android:textColor="@color/colorAccent"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/choose_manually"
            android:textAllCaps="false"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>