<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".GateFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:contentDescription="@string/htary_big_logo"
            android:id="@+id/colord_logo"
            android:layout_width="212dp"
            android:layout_height="75dp"
            android:layout_marginTop="100dp"
            android:src="@drawable/ic_htary_colored"
            app:layout_constraintBottom_toTopOf="@+id/singin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="spread_inside" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/singin"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="68dp"
            android:text="@string/connect"
            android:textAllCaps="false"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/colord_logo" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/singup"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:backgroundTint="@android:color/white"
            app:rippleColor="@color/colorAccentLight"
            android:textColor="@color/colorAccent"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:gravity="center"
            android:text="@string/register"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/singin" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/argument"
            android:textSize="9sp"
            android:layout_marginTop="40dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/singup"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>